@@ -12,6 +12,7 @@ Kevin Barry
 Derek Battams
 Curtis Beattie
 Dave Bell
+Igor Belyi
 Brian Bernas
 Jonas Birmé
 Eric Blade
